# e-iclean

./: .gitignore  AGENTS.md  README.md  pyright_report.txt  pyright_report_new.txt  pyrightconfig.json
backend/: BUILD.md  pytest.ini  requirements.txt  run.py
backend/app/: config.py  db.py  main.py  models.py  schemas.py  state.py
backend/app/device/: afc_client.py  discovery.py  pairing.py
backend/app/ipc/: dispatcher.py  handlers.py  protocol.py
backend/app/services/: delete_service.py  enumeration.py  library_delete.py  library_scan.py  live_photo.py  settings_service.py  transfer_engine.py  usb_power.py  verification.py
backend/app/tests/: conftest.py  test_delete_service.py  test_device_discovery.py  test_enumeration.py  test_ipc_dispatcher.py  test_library_delete.py  test_library_scan.py  test_live_photo.py  test_requeue_missing_local_files.py  test_retry_failed_items.py  test_settings_handlers.py  test_settings_service.py  test_transfer_engine.py  test_transfer_resume.py  test_verification.py
backend/app/utils/: errors.py  logger.py  naming.py
docs/: DEVELOPMENT.md  ipc_protocol.md  project_specification.md
src/: api.js  index.html  main.js  style.css  ui.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  events.rs  ipc.rs  lib.rs  sidecar.rs
